# Assignment-3

312136971#_205681547/: CMakeLists.txt
312136971#_205681547/Client/: CMakeLists.txt  makefile
312136971#_205681547/Client/include/: BGSEncoder.h  ConnectionHandler.h  ReadKeyboard.h  ReadSocket.h
312136971#_205681547/Client/src/: BGSClient.cpp  BGSEncoder.cpp  Client.cpp  ConnectionHandler.cpp  ReadKeyboard.cpp  ReadSocket.cpp  echoClient.cpp
312136971#_205681547/Server/src/main/java/bgu/spl/net/api/: MessageEncoderDecoderBGS.java  OpCodesEnum.java
312136971#_205681547/Server/src/main/java/bgu/spl/net/api/Messages/: ACKMessage.java  BGSMessage.java  DisconnectMessage.java  ErrorMessage.java  FollowMessage.java  LoginMessage.java  LogoutMessage.java  NotificationMessage.java  (+5 more)
312136971#_205681547/Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  ReactorMain.java  Server.java  TPCMain.java  ThreadPerClientServer.java
312136971#_205681547/src/main/java/bgu/spl/net/api/: MessageEncoderDecoderBGS.java  MessagingProtocol.java  OpCodesEnum.java
312136971#_205681547/src/main/java/bgu/spl/net/api/Messages/: ACKMessage.java  ErrorMessage.java  LoginMessage.java  LogoutMessage.java  PostMessage.java  RegisterMessage.java  UserlistMessage.java
312136971#_205681547/src/main/java/bgu/spl/net/api/bidi/: Connections.java  ConnectionsImpl.java  ProtocolDataBase.java
312136971#_205681547/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  Server.java
(+6 files in other folders)
